Collections: Multi edit now features a global input label filter and a way to collapse/expand the items (fixes #1579)

--- a/platforms/common/css-compiled/g-admin.css
+++ b/platforms/common/css-compiled/g-admin.css
@@ -6130,10 +6130,13 @@ html.g5-dialog-open {
 }
 #g5-container .g5-dialog.g5-modal-collection-editall .g5-content {
   width: 90%;
+  /*.settings-block:not(:only-child) {
+      width: 48% !important;
+      margin: 10px 1% !important;
+  }*/
 }
 #g5-container .g5-dialog.g5-modal-collection-editall .g5-content .settings-block:not(:only-child) {
-  width: 48% !important;
-  margin: 10px 1% !important;
+  margin: 10px 0;
 }
 @media only all and (max-width: 47.938rem) {
   #g5-container .g5-dialog.g5-modal-collection-editall .g5-content .settings-block {
